Implementando segurança e autorizaçao